update calendar.js
